--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
@@ -1,5 +1,5 @@
-@use 'sass:color';
-@import 'settings/variables';
+@use "sass:color";
+@import "settings/variables";
 
 .link-to-home {
   display: none;
@@ -73,8 +73,8 @@
   }
 
   &::after {
-    content: '';
-    background: url('/assets/Iconos/Actions/link.svg') no-repeat;
+    content: "";
+    background: url("/assets/Iconos/Actions/link.svg") no-repeat;
     background-size: cover;
     width: 0.75rem;
     height: 0.75rem;
@@ -90,6 +90,10 @@
   &:not(:last-of-type) {
     margin-bottom: 2rem;
   }
+}
+
+.trend__create-button {
+  position: absolute;
 }
 
 @media screen and (min-width: 768px) {
