--- a/src/app/modules/trends/components/trends-list/trends-list.component.html
+++ b/src/app/modules/trends/components/trends-list/trends-list.component.html
@@ -10,50 +10,8 @@
   </a>
 </article>
 
-<app-button type="primary" [size]="'extraLarge'">Estira</app-button>
-<br />
-<app-button type="lightSecondary" [size]="'large'">Estira</app-button>
-<br />
+<app-button (click)="slideOut.toggleSlideOut()" type="primary"
+  >Slide</app-button
+>
 
-<app-button type="secondary" [size]="'medium'">Estira</app-button>
-<br />
-
-<app-button type="lightPrimary" [size]="'large'">Estira</app-button>
-<br />
-
-<app-button [size]="'extraSmall'">Estira</app-button>
-<br />
-
-<app-button
-  [shape]="'rounded'"
-  [size]="'extraLarge'"
-  [img]="'assets/Iconos/Actions/link.svg'"
-></app-button>
-<br />
-<app-button
-  [shape]="'rounded'"
-  [size]="'large'"
-  [img]="'assets/Iconos/Actions/link.svg'"
-></app-button>
-<br />
-
-<app-button
-  [shape]="'rounded'"
-  [size]="'medium'"
-  [img]="'assets/Iconos/Actions/link.svg'"
-></app-button>
-<br />
-
-<app-button
-  [shape]="'rounded'"
-  [size]="'small'"
-  [img]="'assets/Iconos/Actions/link.svg'"
-></app-button>
-<br />
-
-<app-button
-  [shape]="'rounded'"
-  [size]="'extraSmall'"
-  [img]="'assets/Iconos/Actions/link.svg'"
-></app-button>
-<br />
+<app-slide-out #slideOut><div></div></app-slide-out>
