wip create-edit trend

--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.html
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.html
@@ -37,10 +37,13 @@
 </article>
 
 <app-button
+  *ngIf="!slideOut?.isActive"
   class="trend__create-button"
   type="primary"
   size="large"
-  [img]="'assets/Iconos/Actions/edit.svg'"
+  shape="rounded"
+  img="assets/Iconos/Actions/add.svg"
+  (click)="isEdit = false; slideOut.toggleSlideOut()"
 ></app-button>
 
 <app-slide-out #slideOut>
