--- a/src/app/modules/trends/components/trends-list/trends-list.component.scss
+++ b/src/app/modules/trends/components/trends-list/trends-list.component.scss
@@ -1,4 +1,4 @@
-@import 'settings/variables';
+@import "settings/variables";
 
 .trend {
   width: 100%;
@@ -42,7 +42,7 @@
     margin-bottom: 0.75rem;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       right: 0;
@@ -86,6 +86,12 @@
     font-size: 0.75rem;
     margin: 0;
   }
+}
+
+.trend__create-button {
+  position: fixed;
+  right: 150px;
+  top: 650px;
 }
 
 @media screen and (max-width: 767px) {
