--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
@@ -93,7 +93,9 @@
 }
 
 .trend__create-button {
-  position: absolute;
+  position: fixed;
+  right: 150px;
+  top: 650px;
 }
 
 @media screen and (min-width: 768px) {
