--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,5 +1,6 @@
 <button
   class="button"
+  [type]="typeButton"
   [class.button__primary]="type === 'primary'"
   [class.button__secondary]="type === 'secondary'"
   [class.button__lightPrimary]="type === 'lightPrimary'"
