--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.html
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.html
@@ -8,7 +8,11 @@
       <button type="button" class="trend__action" (click)="onSlideOut(true)">
         <img src="assets/Iconos/Actions/edit.svg" alt="Editar noticia" />
       </button>
-      <button type="button" class="trend__action" (click)="onSlideOut(false)">
+      <button
+        type="button"
+        class="trend__action"
+        (click)="onRemoveTrend(trend.id)"
+      >
         <img src="assets/Iconos/Actions/delete.svg" alt="Borrar noticia" />
       </button>
     </div>
