add style to form

--- a/src/app/modules/trends/components/trend-edit/trend-edit.component.html
+++ b/src/app/modules/trends/components/trend-edit/trend-edit.component.html
@@ -12,23 +12,35 @@
   <div class="trend-edit__form">
     <div class="trend-edit__form__input">
       <label>URL</label>
-      <input type="text" formControlName="url" />
+      <input class="app-input" type="text" formControlName="url" />
     </div>
+
     <div class="trend-edit__form__input">
-      <label>Imagen</label>
-      <input type="text" formControlName="image" />
+      <label>Image</label>
+      <input class="app-input" type="text" formControlName="image" />
     </div>
+
     <div class="trend-edit__form__input">
       <label>Provider</label>
-      <input type="text" formControlName="provider" />
+      <select class="app-input" formControlName="provider">
+        <option *ngFor="let provider of TrendProviders" [value]="provider">
+          {{ provider }}
+        </option>
+      </select>
     </div>
+
     <div class="trend-edit__form__input">
       <label>Title</label>
-      <input type="title" formControlName="title" />
+      <input class="app-input" type="title" formControlName="title" />
     </div>
+
     <div class="trend-edit__form__input">
       <label>Contenido</label>
-      <textarea type="textarea" formControlName="body"></textarea>
+      <textarea
+        class="app-input"
+        type="textarea"
+        formControlName="body"
+      ></textarea>
     </div>
   </div>
 </form>
