--- a/src/app/modules/trends/components/trends-list/trends-list.component.scss
+++ b/src/app/modules/trends/components/trends-list/trends-list.component.scss
@@ -99,6 +99,11 @@
     display: block;
     margin-bottom: 4.625rem;
   }
+
+  .trend__create-button {
+    right: 10%;
+    top: 85%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
