--- a/src/app/shared/slide-out/slide-out.component.scss
+++ b/src/app/shared/slide-out/slide-out.component.scss
@@ -14,7 +14,7 @@
 .slide-out {
   height: 100%;
   width: 400px;
-  background-color: $secondary;
+  background-color: $font-color-light;
   color: #fff;
   overflow: hidden;
   position: fixed;
