--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -53,3 +53,16 @@ p {
     background-color: transparent;
   }
 }
+
+.app-input {
+  margin: 0;
+  padding: 0.8rem;
+  border: 1px solid $font-color-secondary;
+  border-radius: 4px;
+  text-decoration: none;
+  color: $font-color-dark;
+  min-height: 2.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
