--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.html
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.html
@@ -50,3 +50,7 @@
     (onCancel)="onCancelEdit()"
   ></app-trend-edit>
 </app-slide-out>
+<img src="assets/Iconos/Toast/success.svg" width="70px" />
+<img src="assets/Iconos/Toast/info.svg" width="70px" />
+<img src="assets/Iconos/Toast/warning.svg" width="70px" />
+<img src="assets/Iconos/Toast/error.svg" width="70px" />
