--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -25,6 +25,7 @@
   }
   &__rounded {
     border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     > img {
       padding: 0.25rem;
       object-fit: contain;
