fix button responsive

--- a/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
+++ b/src/app/modules/trends/components/trend-detail/trend-detail.component.scss
@@ -98,6 +98,13 @@
   top: 650px;
 }
 
+@media screen and (max-width: 767px) {
+  .trend__create-button {
+    right: 10%;
+    top: 80%;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .trend__detail {
     margin-bottom: 1rem;
